api get product detail
